--- a/client/components/Navigation/Navigation.module.scss
+++ b/client/components/Navigation/Navigation.module.scss
@@ -75,8 +75,7 @@
 
   .container {
     padding: 0;
-    padding-left: 3%;
-
+    
     .nav {
       display: flex;
       flex-direction: row;
@@ -89,6 +88,7 @@
 
     .logo {
       align-self: center;
+      display: none;
     }
   }
 }
