mobile nav header improvements

--- a/client/components/MobileHeader/MobileHeader.module.scss
+++ b/client/components/MobileHeader/MobileHeader.module.scss
@@ -7,7 +7,7 @@
     font-size: 1.5rem;
     align-items: center;
     justify-items: left;
-    padding: 0 8px;
+    padding: 10px 8px ;
 
     .headerIcon {
         display: flex;
