slightly bigger nav icons

--- a/client/components/Navigation/NavItem/NavItem.module.scss
+++ b/client/components/Navigation/NavItem/NavItem.module.scss
@@ -39,8 +39,8 @@
         .navIcon {
             display: flex;
             color: #f1f1f1;
-            font-size: 18px;
-            height: 18px;
+            font-size: 1.4rem;
+            height: 1.4rem;
             -webkit-font-smoothing: subpixel-antialiased;
         }
 
