--- a/client/components/Navigation/UserMenu/UserMenu.module.scss
+++ b/client/components/Navigation/UserMenu/UserMenu.module.scss
@@ -13,7 +13,7 @@
 
     .icon {
         color: #fff;
-        font-size: 18px;
+        font-size: 1.4rem;
         -webkit-font-smoothing: antialiased;
         text-decoration: none;
     }
