--- a/client/components/UserMenu/UserMenu.module.scss
+++ b/client/components/UserMenu/UserMenu.module.scss
@@ -62,6 +62,10 @@
     letter-spacing: 0.02rem;
     font-weight: 400;
 
+    .floatRight {
+      float: right;
+    }
+
     &.userName {
       font-weight: 600;
       padding: 0px 8px 0px 16px;
