--- a/client/pages/Admin/SubscriptionSettings/SubscriptionSettings.module.scss
+++ b/client/pages/Admin/SubscriptionSettings/SubscriptionSettings.module.scss
@@ -6,17 +6,19 @@
       font-size: 18px;
       margin: 10px 0 15px 0;
     }
+  }
 
-    .inputField {
-      margin: 14px 0 0 0;
-      width: 100%;
+  .inputField {
+    margin: 14px 0 0 0;
+    width: 100%;
+    max-width: 460px;
 
-      .inputDescription {
-        color: rgb(96, 94, 92);
-        font-size: 10px;
-      }
+    .inputDescription {
+      color: rgb(96, 94, 92);
+      font-size: 10px;
     }
   }
+
   .saveButton {
     margin: 10px 0 0 0;
   }
