--- a/client/components/PermissionList/PermissionList.module.scss
+++ b/client/components/PermissionList/PermissionList.module.scss
@@ -1,7 +1,13 @@
 .root {
   .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
     .item {
-      margin: 0;
+      margin: 0 0 15px 0;
+      width: 200px;
+      height: 50px;
     }
   }
 }
