--- a/client/pages/Timesheet/ActionBar/ActionBar.module.scss
+++ b/client/pages/Timesheet/ActionBar/ActionBar.module.scss
@@ -4,6 +4,11 @@
     padding: 0 8px 0 8px;
   }
 
+  .actionBarIcon {
+    font-size: 12;
+    color: 'rgb(120, 120, 120)';
+  }
+
   .confirmPeriodButton {
     width: 180px;
     background: rgb(223, 246, 221);
