--- a/client/pages/Timesheet/ActionBar/WeekPicker/WeekPicker.module.scss
+++ b/client/pages/Timesheet/ActionBar/WeekPicker/WeekPicker.module.scss
@@ -1,11 +1,13 @@
 .root {
   margin-top: 0;
+  
   &:hover {
     input {
       background-color: rgb(243, 242, 241);
       color: rgb(32, 31, 30);
     }
   }
+
   [class*="ms-TextField-fieldGroup"] {
     height: 44px;
 
@@ -15,6 +17,12 @@
       right: 20px;
       align-self: center;
     }
+  }
+
+
+  .actionBarIcon {
+    font-size: 12;
+    color: 'rgb(120, 120, 120)';
   }
 }
 
