Fixed an UI glitch in Admin/Summary

--- a/client/pages/Admin/SummaryView/SummaryView.module.scss
+++ b/client/pages/Admin/SummaryView/SummaryView.module.scss
@@ -5,5 +5,11 @@
     .viewTypeSelector {
       min-width: 120px;
     }
+
+    .rangeSlider {
+      width: 400px;
+      margin-left: 10px;
+      align-self: 'center';
+    }
   }
 }
