--- a/client/pages/Admin/ApiTokens/ApiTokenForm/ApiTokenForm.module.scss
+++ b/client/pages/Admin/ApiTokens/ApiTokenForm/ApiTokenForm.module.scss
@@ -1,13 +1,28 @@
 .root {
-  .form {
+  .sectionTitle {
+    font-size: 16px;
+    margin: 0 0 8px 0;
+  }
+
+  .inputContainer {
+    margin: 8px 0 8px 0;
+  }
+
+  .inputDescription {
+    color: rgb(96, 94, 92);
+    font-size: 10px;
+  }
+
+  .permissions {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    overflow: hidden;
 
-    > div {
-      margin-right: 12px;
-    }
-
-    .expiresField {
-      width: 150px;
+    .permissionItem {
+      width: auto;
+      margin-bottom: 8px;
     }
   }
 
