--- a/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
+++ b/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
@@ -1,20 +1,21 @@
 .root {
   .summary {
-    margin: 0 0 20px 0;
+    margin: 10px 0 20px 0;
 
     ul {
       list-style: none;
       margin: 0;
       padding: 0;
-    }
+      font-size: 13px;
 
-    .label {
-      width: 180px;
-      display: inline-block;
-    }
-
-    .value {
-      font-weight: 600;
+      .label {
+        width: 180px;
+        display: inline-block;
+      }
+  
+      .value {
+        font-weight: 600;
+      }
     }
   }
 }
