--- a/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
+++ b/client/pages/Projects/ProjectDetails/TimeEntries/TimeEntries.module.scss
@@ -1,6 +1,7 @@
 .root {
+  margin: 20px 0 0 0;
   .summary {
-    margin: 10px 0 20px 0;
+    margin: 0 0 20px 0;
 
     ul {
       list-style: none;
