--- a/client/components/ProjectTooltip/ProjectTooltip.module.scss
+++ b/client/components/ProjectTooltip/ProjectTooltip.module.scss
@@ -3,14 +3,25 @@
   padding: 10px;
   min-width: 250px;
 
-  .title {
-    font-size: 13pt;
-    margin: 0;
-  }
+  .header {
+    padding: 0 0 0 8px;
+    display: flex;
+    flex-direction: row;
 
-  .subTitle {
-    font-size: 8pt;
-    margin: 0 0 10px 0;
+    .iconContainer {
+      padding: 6px 12px 0 0;
+      align-self: flex-start;
+    }
+
+    .title {
+      font-size: 13pt;
+      margin: 0;
+    }
+
+    .subTitle {
+      font-size: 8pt;
+      margin: 0 0 10px 0;
+    }
   }
 
   .description {
