CustomerDetails/Header/Actions: Added Edit button

--- a/client/pages/Customers/CustomerDetails/Header/Header.module.scss
+++ b/client/pages/Customers/CustomerDetails/Header/Header.module.scss
@@ -5,7 +5,7 @@
 
   .iconContainer {
     color: #787878;
-    font-size: 45px;
+    font-size: 35px;
     margin: 0 25px 0 0;
   }
 
@@ -23,7 +23,7 @@
     margin: 6px 15px 0 8px;
     display: flex;
 
-    .buttonContainer {
+    .actionItem {
       margin: 0 5px 0 0;
 
       a {
