--- a/client/pages/Customers/CustomerForm/CustomerForm.module.scss
+++ b/client/pages/Customers/CustomerForm/CustomerForm.module.scss
@@ -1,7 +1,9 @@
 .root {
+  max-width: 550px;
+
   .inputField {
-    margin-top: 12px;
-    width: 550px;
+    margin: 14px 0 0 0;
+    width: 100%;
     border-radius: 3px;
   }
 }
