--- a/client/components/Autocomplete/Autocomplete.module.scss
+++ b/client/components/Autocomplete/Autocomplete.module.scss
@@ -1,35 +1,14 @@
-.callout {
-  margin: 0;
+.root {
+  padding: 8px 0 0 0;
 
-  .suggestionContainer {
-    .suggestion {
-      display: flex;
-      flex-direction: row;
-      padding: 4px 16px;
-      font-size: 14px;
-      cursor: pointer;
-
-      &:hover {
-        background-color: #cf5f00;
-        color: #fff;
-        font-weight: 500;
-      }
-
-      .suggestionValue {
-        font-size: initial;
-      }
-
-      .suggestionIcon {
-        padding: 0 8px 0 0;
-        width: 30px;
-        box-sizing: border-box;
-      }
+  &.hasError {
+    .field {
+      border: 1px solid rgb(164, 38, 44);
     }
   }
-}
 
-.root {
   .description {
+    padding: 4px 0 0 0;
     color: rgb(96, 94, 92);
     font-size: 10px;
   }
