--- a/client/components/Autocomplete/SuggestionItem/SuggestionItem.module.scss
+++ b/client/components/Autocomplete/SuggestionItem/SuggestionItem.module.scss
@@ -3,8 +3,7 @@
   font-size: 14px;
   cursor: pointer;
 
-  &.isSelected,
-  &:hover {
+  &.isSelected {
     background-color: #cf5f00;
     color: #fff;
     font-weight: 500;
