--- a/client/pages/Admin/Roles/RolePanel/RolePanel.module.scss
+++ b/client/pages/Admin/Roles/RolePanel/RolePanel.module.scss
@@ -29,9 +29,18 @@
       }
     }
 
-    .saveBtn {
-      width: 100%;
-      margin: 15px 0 0 0;
+    .actions {
+      margin: 10px 0 0 0;
+
+      .deleteBtn {
+        width: 100%;
+        margin: 15px 0 0 0;
+      }
+
+      .saveBtn {
+        width: 100%;
+        margin: 15px 0 0 0;
+      }
     }
   }
 }
