Improvements to SaveFilter component

--- a/client/pages/Reports/SaveFilter/SaveFilter.module.scss
+++ b/client/pages/Reports/SaveFilter/SaveFilter.module.scss
@@ -1,8 +1,13 @@
 .root {
   padding: 8px 12px 8px 12px;
 
-  .saveBtn {
-    margin: 4px 0 0 0;
-    width: 100%;
+  .footer {
+    display: flex;
+    flex-direction: row;
+    
+    .saveBtn {
+      margin: 4px 4px 0 0;
+      width: 100%;
+    }
   }
 }
