--- a/client/pages/Reports/Reports.module.scss
+++ b/client/pages/Reports/Reports.module.scss
@@ -2,8 +2,19 @@
   .container {
     margin: 8px 0 0 0;
 
-    .spinner {
-      margin: 10px;
+    .progress {
+      padding: 10px;
+      display: flex;
+      flex-direction: row;
+
+      .icon {
+        padding: 8px 0 0 0;
+        font-size: 36px;
+      }
+
+      .indicator {
+        margin: 0 0 0 18px;
+      }
     }
   }
 }
