--- a/client/pages/Admin/SummaryView/WeekColumn/WeekColumnTooltip/WeekColumnTooltip.module.scss
+++ b/client/pages/Admin/SummaryView/WeekColumn/WeekColumnTooltip/WeekColumnTooltip.module.scss
@@ -1,15 +1,20 @@
 .root {
   padding: 20px;
+  min-width: 240px;
 
   .header {
     margin: 0 0 12px 0;
-    
+    display: flex;
+    flex-direction: row;
+
     .title {
       font-size: 18px;
+      flex-grow: 1;
     }
 
-    .subTitle {
-      font-size: 14px;
+    .userInfo {
+      font-size: 12px;
+      color: rgb(96, 94, 92);
     }
   }
 }
