--- a/client/pages/Admin/SummaryView/WeekColumn/WeekColumn.module.scss
+++ b/client/pages/Admin/SummaryView/WeekColumn/WeekColumn.module.scss
@@ -1,10 +1,5 @@
 .root {
   display: flex;
   flex-direction: row;
-
-  .checkMark {
-    padding: 2px;
-    margin: 0 4px 0 0;
-    color: green;
-  }
+  cursor: pointer;
 }
