--- a/client/app/Navigation/Navigation.module.scss
+++ b/client/app/Navigation/Navigation.module.scss
@@ -4,27 +4,18 @@
   padding: 0;
   background: #252422;
 
+  &.sticky {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+  }
+
   .container {
-    max-width: 1440px;
-    margin: auto;
+    width: calc(100% - 30px);
+    margin: 0;
+    margin-left: 30px;
     display: flex;
     height: 100%;
-
-    @media (min-width: 576px) {
-      max-width: 540px;
-    }
-
-    @media (min-width: 992px) {
-      max-width: 960px;
-    }
-
-    @media (min-width: 1200px) {
-      max-width: 1140px;
-    }
-
-    @media (min-width: 1440px) {
-      max-width: 1330px;
-    }
 
     .nav {
       display: flex;
@@ -34,6 +25,8 @@
       padding-left: 8px;
       font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
         sans-serif, Apple Color Emoji, Segoe UI Emoji;
+
+
     }
 
     .navRight {
@@ -68,6 +61,7 @@
     backface-visibility: hidden;
     position: fixed;
     bottom: 0px;
+    top: auto;
     width: 100%;
     z-index: 100;
     height: 60px;
@@ -77,6 +71,8 @@
 
     .container {
       padding: 0;
+      margin: 0;
+      width: 100%;
 
       .nav {
         display: flex;
