--- a/server/views/_template.hbs
+++ b/server/views/_template.hbs
@@ -49,10 +49,6 @@
     <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="mobile-web-app-capable" content="yes" />
     <style type="text/css">
-        html {
-            overflow-y: scroll;
-        }
-
         body {
             font-family: "Segoe UI Light", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto,
                 "Helvetica Neue", sans-serif;
@@ -100,7 +96,7 @@
     </style>
 </head>
 
-<body ontouchstart="" style="min-height: 100vh">
+<body ontouchstart="">
     <main role='main'>
         <div id="app">
         </div>
